--- a/.gitignore
+++ b/.gitignore
@@ -1,23 +1,26 @@
-#
-*.csv
-*.RDS
-*.pdf
-*.out
-/code/5_clean.R
-# Job files
+# Files to ignore
+/code/5_clean.R # anonymizes data
+
+# Job files (for HPC work)
 /jobs
 
-# Data files
+# Data files (available on figshare)
 /data
 
-# Output figires
+# Outputs (publication figures)
 /outputs
 
-# Documents
+# Documents (internal project reports)
 /docs
 
 # "Old" Code
 /archive
+
+# temp finals
+*.csv
+*.RDS
+*.pdf
+*.out
 
 # History files
 .Rhistory
